Fix test context bug by bumping us to pre-release avalonia

--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -52,17 +52,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.1.1" />
+    <PackageReference Include="Avalonia" Version="11.1.2-rc1" />
     <PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.0.10" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.1.1" />
-    <PackageReference Include="Avalonia.Labs.Controls" Version="11.0.10.1" />
-    <PackageReference Include="Avalonia.Labs.Panels" Version="11.0.10.1" />
-    <PackageReference Include="Avalonia.ReactiveUI" Version="11.1.1" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.1.2-rc1" />
+    <PackageReference Include="Avalonia.Labs.Controls" Version="11.1.0" />
+    <PackageReference Include="Avalonia.Labs.Panels" Version="11.1.0" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="11.1.2-rc1" />
     <PackageReference Include="Avalonia.Svg" Version="11.1.0" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.1" />
-    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.1" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.2-rc1" />
+    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.2-rc1" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.1" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.2-rc1" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.1.0" />
     <PackageReference Include="BinToss.GroupBox.Avalonia" Version="1.0.0" />
     <PackageReference Include="DialogHost.Avalonia" Version="0.7.9" />
