--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -73,6 +73,7 @@
     <PackageReference Include="MiniToolbar.Avalonia" Version="1.0.26" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
     <PackageReference Include="SixLabors.Fonts" Version="2.0.4" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
     <PackageReference Include="Tabalonia" Version="0.10.3.5" />
   </ItemGroup>
 
