Initial script editor work

--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -134,4 +134,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ViewModels\Editors\ScriptCommandEditors\" />
+    <Folder Include="Views\Editors\ScriptCommandEditors\" />
+  </ItemGroup>
 </Project>
