--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -77,7 +77,10 @@ stages:
         SLAssemblyVersion: $(AssemblyVersion)
       displayName: Build & Publish Serial Loops
 
-    - pwsh: Compress-Archive -Path "$(Build.SourcesDirectory)/src/SerialLoops/bin/Release/$(framework)/$(rid)/publish" -DestinationPath "$(Build.ArtifactStagingDirectory)/publish.zip"
+    - pwsh: |
+        Get-ChildItem -Path "$(Build.SourcesDirectory)/src/SerialLoops/bin/Release/$(framework)/$(rid)/"
+        Compress-Archive -Path "$(Build.SourcesDirectory)/src/SerialLoops/bin/Release/$(framework)/$(rid)/publish" -DestinationPath "$(Build.ArtifactStagingDirectory)/publish.zip"
+      displayName: Compress artifacts to zip
 
     - task: PublishBuildArtifacts@1
       inputs:
