--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -151,7 +151,7 @@ stages:
         downloadPath: '$(Build.ArtifactStagingDirectory)'
       displayName: Download Linux zip artifact
     - pwsh: |
-        Get-Childitem -Path ./install/linux/dpkg-build/ -Recurse | Move-Item -Force -Destination ./dpkg-build
+        Copy-Item -Path ./install/linux/dpkg-build -Destination ./dpkg-build -Recurse -Exclude ".gitkeep"
         Push-Location ./dpkg-build/SerialLoops
         ((Get-Content -Path DEBIAN/control) -replace '#VERSION#', '$(Version)') | Set-Content -Path DEBIAN/control
         Expand-Archive $(Build.ArtifactStagingDirectory)/Linux-v$(Version)/publish.zip -DestinationPath $(Build.ArtifactStagingDirectory)/publish/
@@ -191,8 +191,8 @@ stages:
       displayName: Create tar
     - pwsh: |
         Get-ChildItem $(Build.ArtifactStagingDirectory)
-        ((Get-Content -Path ./install/linux/rpm/rpmbuild/SPECS/SerialLoops.spec) -replace '#VERSION#', '$(Version)') | Set-Content -Path ./install/linux/rpm/rpmbuild/SPECS/SerialLoops.spec
-        Copy-Item -Path $(Build.ArtifactStagingDirectory)/publish.tar.gz $(Build.SourcesDirectory)/install/rpm/rpmbuild/SOURCES/SerialLoops-$(Version).tar.gz
+        ((Get-Content -Path ./install/linux/rpm/rpmbuild/SPECS/SerialLoops.spec) -Replace '#VERSION#', '$(Version)') | Set-Content -Path ./install/linux/rpm/rpmbuild/SPECS/SerialLoops.spec
+        Copy-Item -Path $(Build.ArtifactStagingDirectory)/publish.tar.gz -Destination $(Build.SourcesDirectory)/install/rpm/rpmbuild/SOURCES/SerialLoops-$(Version).tar.gz
         docker run -v $(Build.SourcesDirectory)/install/rpm/rpm-scripts:/rpm-scripts -v $(Build.SourcesDirectory)/install/linux/rpm/rpmbuild:/root/rpmbuild fedora:39 /rpm-scripts/rpm-make.sh
       displayName: Build rpm
     - task: PublishBuildArtifacts@1
