--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -88,7 +88,9 @@ stages:
     steps:
     - checkout: self
       clean: true
-    - script: cp $(Build.SourcesDirectory)/NuGet.Config $(Agent.BuildDirectory)/Nuget/NuGet.Config
+    - script: |
+        mkdir -p $(Agent.BuildDirectory)/Nuget
+        cp $(Build.SourcesDirectory)/NuGet.Config $(Agent.BuildDirectory)/Nuget/NuGet.Config
       displayName: Copy NuGet.Config to Nuget directory
     - task: DotNetCoreCLI@2
       inputs:
