--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -93,8 +93,8 @@ stages:
       inputs:
         command: 'build'
         projects: $(Build.SourcesDirectory)/src/SerialLoops/SerialLoops.csproj
-        restoreArguments: '-c Release -f net8.0 -r $(rid)'
-      displayName: Restore
+        arguments: '-c Release -f net8.0 -r $(rid)'
+      displayName: Build (to restore bc restore doesn't work)
     - task: DotNetCoreCLI@2
       inputs:
         command: 'msbuild'
