--- a/azure-pipelines-official.yml
+++ b/azure-pipelines-official.yml
@@ -139,7 +139,7 @@ stages:
         mkdir "Serial Loops.app"
         cp -r $SLApp/* "./Serial Loops.app/"
         ls -l
-        python serial_loops_pkg_builder.py $SLVersion "./Serial Loops.app"
+        python serial_loops_pkg_builder.py $SLVersion
       env:
         SLVersion: $(Version)
         SLApp: "$(Build.ArtifactStagingDirectory)/$(artifactName)"
